# poly_lib

./: .gitignore  README.md  lattice_animal.py  redelmeier_proners.py  utils.py
jensen_analysis/: analyze.py  mem15.txt  mem53.txt  out57_31n.txt  out57_31y.txt  out57_32n.txt  out57_32y.txt  out60_30.txt  out60_31n.txt  out60_31y.txt  out60_32.txt  out60_33n.txt  out60_33y.txt  out60_34.txt  out60_35n.txt  out60_35y.txt  out60_36.txt  res60_37p.txt  res60_52p.txt
jensen_diag/: BoundryPattern.cpp  BoundryPattern.h  CMakeLists.txt  PackedArray.cpp  PackedArray.h  RectManager.cpp  RectManager.h  SigDict.cpp  SigDict.h  data_types.cpp  data_types.h  gen_inputs.py  genfunc.cpp  genfunc.h  jensen_utils.cpp  main.cpp  settings.h  utils.cpp  utils.h
jensen_diag/qsub_scripts/: in60_30.txt  in60_31n.txt  in60_31y.txt  in60_32.txt  in60_33n.txt  in60_33y.txt  in60_34.txt  in60_35n.txt  in60_35y.txt  in60_36.txt  qsub_60_30.txt  qsub_60_31n.txt  qsub_60_31y.txt  qsub_60_32.txt  qsub_60_33n.txt  qsub_60_33y.txt  qsub_60_34.txt  qsub_60_35n.txt  qsub_60_35y.txt  qsub_60_36.txt
latex_drawer/: header.tex  polylib.sty  standalone_header.tex
scripts/: draw_animals.py  drawer_workspace.py  redelmeier.py  redelmeier_count.py  redelmeier_handlers.py
src/: CMakeLists.txt  RectManager.cpp  RectManager.h  RectStatus.cpp  RectStatus.h  SigDict.cpp  SigDict.h  data_types.h  gen_inputs.py  genfunc.cpp  genfunc.h  jensen_utils.h  utils.h
